Fix T47593: 'Move to layer' will be crash in blender 2.77rc1.

To be backported to 2.77.